# prex-core-challenge

./: Cargo.toml  README.md
postman/: client_transactions.postman_collection.json
src/: lib.rs  main.rs
src/constants/: constants.rs
src/controller/: client_controller.rs  mod.rs
src/dto/: client_balance_dto.rs  client_info_dto.rs  mod.rs  new_client_dto.rs  new_credit_transaction.rs  new_debit_transaction.rs
src/errors/: common_error.rs
src/mapper/: client_info_mapper.rs  mod.rs  new_client_mapper.rs
src/model/: client_model.rs  mod.rs
src/service/: client_service.rs
src/state/: app_state.rs
src/stub/: client_info_stub.rs  mod.rs  new_client_stub.rs  new_credit_transaction_stub.rs  new_debit_transaction_stub.rs
tests/: client_integration_test.rs
