[package]
name = "prex-core-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
actix-web = "4"
log = "0.4.27"
env_logger = "0.10"
mockall = "0.12"
once_cell = "1.21.3"  #
serial_test = "2.0"
http = "0.2.12"
num-traits = "0.2.19"
